--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DJANGO_SECRET_KEY=dummy-dev-key
 DJANGO_DEBUG=false
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
-ADMIN_ALLOWED_IPS=127.0.0.1
+DJANGO_ALLOWED_HOSTS=ddrop-kxdl.onrender.com
+ADMIN_ALLOWED_IPS=72.14.201.50
 STEAM_API_KEY=49F5BE32A979D04F6B427125E43BF77A
 MARKETCSGO_API_KEY=vs0W4CuALGTKq7k4X331PwK6i7Xm03w
