--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DJANGO_SECRET_KEY=dummy-dev-key
 DJANGO_DEBUG=false
 DJANGO_ALLOWED_HOSTS=ddrop-kxdl.onrender.com
-ADMIN_ALLOWED_IPS=72.14.201.50, 52.13.128.108
-STEAM_API_KEY=49F5BE32A979D04F6B427125E43BF77A
+ADMIN_ALLOWED_IPS=72.14.201.50
+STEAM_API_KEY=F6B4D71F4BFAC6350C2A2265FFD0FDAB
 MARKETCSGO_API_KEY=vs0W4CuALGTKq7k4X331PwK6i7Xm03w
